		time only a mark is placed in ~/var and nothing is done.

	mbfile:
		Dropped support for areas on CDrom.

	mbfido:
		Fixed commandline parser for mail recipients.
		Added subject line clean in several places.
		When message areas are autocreated, golded.inc and msg.txt are
		recreated for the external editors.
		The web stats can now limit the size of mailhistory.html

	mbmon:
		Made Internet BBS Chat final.

	mbtask:
		Made Internet BBS Chat final.
		Dropped support for file areas on CDrom.

	mbsetup:
		Added setup switches per node to disable PLZ or GZ and BZ2
		compression protocols with binkp.
		Added setup entry 1.15.8 to set a limit on the size of the
		mailer history html page.
		Made Internet BBS Chat final.
		Added setup items 1.13.4 and 1.13.5. These could point to
		a valid apache logfile in common format and ftp xferlog
		logfile. If defined then downloads via www and or ftp can
		be counted.
		Dropped support for file areas on CDrom.


v0.71.2		16-Jan-2005 - 13-Jun-2005

	upgrade:
		Start mbsetup, in screen 1.2 item 10, add your real internet
		name or IP there. This MUST be the name that is returned when
		you do a nslookup on your IP address.
		Add the following line to /etc/services:
		fido            60179/udp               # chatserver

	general:
		Upgraded to ftscprod.010

	charset:
		Changed rfc-2045 name x-mac to mac. Changed x-ibmpc to cp437.
		This allows rfc mime headers to show official names.
		Added some basic things to support Chinese.

	libdiesel.a:
		Changed the maximum string length from 2560 to 4096 characters.

	libmbinet.a:
		Fixed error messages when the host to connect to has a DNS
		error.

	mbcico:
		Added protection during binkp receive for zero bytes compressed
		data frames, this will cause uncompress error -5 because zero
		bytes can't be compressed at all.
		Fixed test for valid aka's in the EMSI handshake that prevented
		that host aka's (node /0) were not presented to the remote.
		(thanks Przemyslaw Kwiatkowski).